--- a/assets/main.scss
+++ b/assets/main.scss
@@ -40,7 +40,6 @@ font-family: 'IBM Plex Mono', monospace;
 body {
   font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
   font-weight: normal;
-  letter-spacing: 0.0em
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -53,7 +52,9 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 2.2222em; /* 40px */
   line-height: 1.3500; /* 54px */
-
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  text-align: center;
 }
 
 h2 {
@@ -61,6 +62,8 @@ h2 {
   line-height: 1.7419em; /* 54px */
   margin-top: auto;
   margin-bottom: calc( var(--baseline) * 1rem);
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
 }
 
 h2::before {
