--- a/assets/main.scss
+++ b/assets/main.scss
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* typographic scale https://drewish.com/tools/vertical-rhythm/ */
-h1 {
+h1, h1.post-title {
   font-size: 2.2222em; /* 40px */
   line-height: 1.3500; /* 54px */
   text-transform: uppercase;
