--- a/assets/main.scss
+++ b/assets/main.scss
@@ -25,7 +25,7 @@
 body {
   /* background-color: var(--colorSub); */
   /* color: var(--colorMain); */
-  background-color: #fffef5;
+  background: #fffef5;
 }
 
 /*
