ajout de la page de test hypothesis

--- a/css/edition.css
+++ b/css/edition.css
@@ -7,6 +7,12 @@
   line-height: var(--baseline);
 }
 
+body {
+  max-width: 47rem;
+  margin: auto;
+  margin-bottom: calc( var(--baseline) * 3rem);
+};
+
 teiHeader {
     display: none;
 }
