--- a/css/edition.css
+++ b/css/edition.css
@@ -1,3 +1,12 @@
+/*
+  @author emchateau
+  @since 2020-06
+  @version 1.0
+*/
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 :root {
   /* --colorMain: #fdfdfe; */
   /* --colorSub: #3f51b5; */ /* #E73E0D */
@@ -7,147 +16,132 @@
   line-height: var(--baseline);
 }
 
+body {
+  /* background-color: var(--colorSub); */
+  /* color: var(--colorMain); */
+  background: #fffef5;
+}
+
+/*
+ * Typography
+ */
+/*
+font-family: 'IBM Plex Sans', sans-serif;
+font-family: 'IBM Plex Sans Condensed', sans-serif;
+font-family: 'IBM Plex Serif', serif;
+font-family: 'IBM Plex Mono', monospace;
+*/
+
+body {
+  font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+  font-weight: normal;
+}
+
+/* sticky footer */
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  min-height: 100vh;
+}
+main {
+  flex-grow: 1;
+  width: 100%;
+  margin: auto;
+}
+footer {
+  flex-shrink: 0;
+}
+
 main {
   max-width: 47rem;
   margin: auto;
   margin-bottom: calc( var(--baseline) * 3rem);
-};
-
-teiHeader {
-    display: none;
 }
 
-front, body, back, div, p {
-    display: block;
+h1, h2, h3, h4, h5, h6 {
+  font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
 }
 
-front, body, back {
-    color: black;
+/* typographic scale https://drewish.com/tools/vertical-rhythm/ */
+h1, h1.post-title {
+  font-size: 2.2222em; /* 40px */
+  line-height: 1.3500; /* 54px */
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  text-align: center;
 }
 
-
-
-front {
-    
-    max-width: -webkit-calc(800px - (30px * 2));
-    max-width: calc(800px - (30px * 2));
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 30px;
-    padding-left: 30px;
-  /* background-color: var(--colorSub); */
-  /* color: var(--colorMain); */
-    background: #fffef5;
-    font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
-    font-weight: normal;
+h2 {
+  font-size: 1.7222em; /* 31px */
+  line-height: 1.7419em; /* 54px */
+  margin-top: auto;
+  margin-bottom: calc( var(--baseline) * 1rem);
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  text-align: center;
 }
 
-titlePage {
-    text-align: center;
-    display: block;
-    margin-bottom: calc( var(--baseline) * 1rem);
+/* h2::before {
+  content: '';
+  display: block;
+  // height: 100%;
+  width: 100%;
+  border-bottom: calc( var(--baseline) * 0.2rem) solid ;
+  margin-bottom: calc( var(--baseline) * 0.8rem);
+} */
+
+h3 {
+  font-size: 1.334em; /* 18 * 1.334em = 24px */
+  line-height: 1.125; /* 24 * 1.125 = 27px*/
+  margin-bottom: calc( var(--baseline) * 1rem);
 }
 
-titlePart, docAuthor, epigraph, docImprint, docDate {
-    display: block;
-    /*@todo mettre un padding bottom ou margin bottom après chaque bloc pour els séparer*/
+h3::before {
+  content: '';
+  display: block;
+  // height: 100%;
+  width: 15%;
+  border-bottom: calc( var(--baseline) * 0.1rem) solid ;
+  margin-bottom: calc( var(--baseline) * 0.9rem);
 }
 
-titlePart {
-    font-size: 2.2222em;
-    line-height: 1.3500;
-    text-transform: uppercase;
-    letter-spacing: 0.15em;
-    text-align: center;
+h4 {
+  font-size: 1.2222em; /* 22px */
+  line-height: 1.2273; /* 27px */
+  margin: auto;
 }
 
-docImprint publisher, docImprint placeName {
-    display: block;
+h5 {
+  font-size: 1.1111em; /* 20px */
+  line-height: 1.350; /* 27px */
+  margin: auto;
 }
 
-div[type=dedicace] { 
-    margin-bottom: calc(var(--baseline) * 1rem);
-    
-}
-
-div[type=dedicace] head {
-    text-align: center;
-    display: block;
-}
-
-signed {
-    display: block;
-    text-align: right;
+h6 {
+  font-size: 1em;
+  margin: auto;
 }
 
 p {
-    margin-top: auto;
-    margin-bottom: calc(var(--baseline) * 1rem);
+  margin-top: auto;
+  margin-bottom: calc(var(--baseline) * 1rem);
 }
 
-foreign {
-    font-style: italic;
+sup {
+  vertical-align: middle;
+  font-size: smaller;
 }
 
-/* CHANGEMENT DE PAGE */
-
-fw[type=runningHead] {
-    display: none;
+sup.note {
+  font-size: 0.7em;
 }
 
-fw[type=pageNum]::before {
-    content: " [";
+.site-title {
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  text-align: center;
 }
-
-fw[type=pageNum]::after {
-    content: "] ";
-}
-
-
-lb {
-    display: block;
-}
-
-persName {
-    font-weight: bold;
-}
-
-sic::after {
-    content :" [sic]";
-}
-
-hi[rend=capital] {
-    font-variant: small-caps;
-    /*text-transform: uppercase;*/
-}
-
-/* NOTE */
-
-note::before {
-    content: attr(n);
-    vertical-align :super;
-    font-size: .7em;
-}
-
-note p {
-    display: none;
-}
-
-note:hover p {
-    display: block;
-    position: absolute;
-    background-color: black;
-    color: #fffef5;
-    /*@todo voir avec Emmanuel*/
-}
-
-/* ABREVIATIONS */
-
-abbr {
-    display: none;
-}
-
-expan {
-    display: inline;
-}
-/*@todo voir avec Emmanuel car il y a un espace qui se crée exemple : "Saint -Augustin" */
